Fixed alignment of navbar composition icon

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -204,3 +204,7 @@
   padding: 1rem;
   display: none;
 }
+
+.landing-content {
+  margin-top: 5rem;
+}
